<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GMessngr</string>
    <string name="package_name">com.huntersdevs.www.gmessngr</string>

    <string name="realm_db_name">gmessngr.realm</string>

    <string name="login">LOG IN</string>
    <string name="tnc"><u>Terms &amp; Condition</u></string>

    <string name="youareawesome">You are awesome!</string>

    <string name="somethingwentwrong">Something went wrong, Please try again!</string>
    <string name="checknetworkconnection">Unable to connect, please check your network connection!</string>

    <string name="tag">tag</string>

    <string name="setting">Settings</string>

    <string name="phone_number">PHONE_NUMBER</string>
    <string name="verification_id">VERIFICATION_ID</string>

    <string name="enter_number">Enter phone number</string>
    <string name="plus_nineone">+91</string>
    <string name="next">NEXT</string>
    <string name="hint_enter_pin">Enter CODE here!</string>
    <string name="enter_pin_number">ENTER YOUR VERIFICATION CODE</string>
    <string name="sms_pin_sent_to">VERFICATION CODE sent to</string>
    <string name="please_enter_pin_below">please enter the VERIFICATION CODE below</string>

    <string name="wrong_number">Wrong Number ?</string>

    <string name="validate_string">0123456789</string>
    <string name="verifying" tools:ignore="TypographyEllipsis">Verifying...</string>

    <string name="need_permission">Need your permissions to work!</string>

    <string name="contacts">Contacts</string>
    <string name="contacts_tagline">To check in database for your friends!</string>
    <string name="storage">Storage</string>
    <string name="storage_tagline">To securely store your documents!</string>

    <string name="continuee">Continue</string>
    <string name="not_now">Not now!</string>

    <string name="were_done">We\'re almost done</string>
    <string name="were_done_tagline">Just enter your nickname below!</string>

    <string name="enter_name">Enter nickname</string>

    <string name="counter">0/15</string>
    <string name="counter_limit">/15</string>

    <string name="setting_up" tools:ignore="TypographyEllipsis">Setting up profile...</string>

    <string name="users_list_collection">usersList</string>
    <string name="user_id">userId</string>
    <string name="users_info">usersInfo</string>

    <string name="users_collection">users</string>
    <string name="profile_info_collection">profileInfo</string>

    <string name="profile_name_db">profileName</string>
    <string name="phone_number_db">phoneNumber</string>

    <string name="plus_nine_one">+91</string>
    <string name="zero_nine_one">091</string>

</resources>
