<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProfileSetupActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">
        <TextView
            android:id="@+id/tv_app_name"
            android:layout_marginStart="@dimen/sixteen"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/allura"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:text="@string/app_name" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_were_done"
        android:layout_marginTop="@dimen/onetwentyeight"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:text="@string/were_done"
        android:fontFamily="@font/ios_font_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_were_done_tagline"
        android:layout_marginTop="@dimen/six"
        android:layout_below="@id/tv_were_done"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:text="@string/were_done_tagline"
        android:fontFamily="@font/ios_font_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:translationZ="@dimen/four"
        android:paddingTop="@dimen/sixteen"
        android:paddingBottom="@dimen/sixteen"
        android:layout_alignParentBottom="true"
        android:background="@drawable/background_main_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_name"
            android:layout_toStartOf="@+id/tv_counter"
            android:textSize="16sp"
            android:maxLength="15"
            android:layout_centerVertical="true"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:fontFamily="@font/ios_font_regular"
            android:layout_marginStart="@dimen/twelve"
            android:layout_marginEnd="@dimen/twelve"
            android:hint="@string/enter_name"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_counter"
            android:text="@string/counter"
            android:layout_centerVertical="true"
            android:fontFamily="@font/ios_font_regular"
            android:layout_marginEnd="@dimen/sixteen"
            android:layout_toStartOf="@id/tv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_next"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/sixteen"
            android:paddingTop="@dimen/eight"
            android:paddingBottom="@dimen/eight"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:textColor="@android:color/white"
            android:background="@drawable/background_btn_next_selector"
            android:text="@string/next"
            android:fontFamily="@font/ios_font_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/ll_settingup"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_verifying"
                android:layout_marginEnd="@dimen/twelve"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/ios_font_regular"
                android:text="@string/setting_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lav"
                app:lottie_loop="true"
                android:layout_marginEnd="@dimen/sixteen"
                android:layout_gravity="center_vertical"
                app:lottie_rawRes="@raw/loading"
                android:layout_width="@dimen/thirtytwo"
                android:layout_height="@dimen/thirtytwo" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>