<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login_activity"
    tools:context=".activity.LoginActivity">

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/allura"
        android:textColor="@android:color/black"
        android:textSize="52sp"
        android:text="@string/app_name" />

    <RelativeLayout
        android:translationZ="@dimen/four"
        android:paddingTop="@dimen/sixteen"
        android:paddingBottom="@dimen/sixteen"
        android:layout_alignParentBottom="true"
        android:background="@drawable/background_main_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_country_code"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/sixteen"
            android:textColor="@android:color/black"
            android:fontFamily="@font/ios_font_regular"
            android:text="@string/plus_nineone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_phone_number"
            android:layout_toEndOf="@+id/tv_country_code"
            android:layout_toStartOf="@+id/tv_next"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:inputType="phone"
            android:maxLength="10"
            android:textColor="@android:color/black"
            android:fontFamily="@font/ios_font_regular"
            android:layout_marginStart="@dimen/twelve"
            android:layout_marginEnd="@dimen/twelve"
            android:hint="@string/enter_number"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_next"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/sixteen"
            android:paddingTop="@dimen/eight"
            android:paddingBottom="@dimen/eight"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:textColor="@android:color/white"
            android:background="@drawable/background_btn_next_selector"
            android:text="@string/next"
            android:fontFamily="@font/ios_font_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <FrameLayout
        android:visibility="gone"
        android:translationZ="@dimen/six"
        android:id="@+id/fl_loading"
        android:background="#CC000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lav"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/loading"
            android:layout_gravity="center"
            android:layout_width="@dimen/fiftysix"
            android:layout_height="@dimen/fiftysix" />
    </FrameLayout>


</RelativeLayout>