<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rl_main"
    android:background="@drawable/background_login_activity"
    tools:context=".activity.CodeVerifyActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">
        <TextView
            android:id="@+id/tv_app_name"
            android:layout_marginStart="@dimen/sixteen"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/allura"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:text="@string/app_name" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_enter_pin"
        android:layout_marginTop="@dimen/onetwentyeight"
        android:text="@string/enter_pin_number"
        android:fontFamily="@font/ios_font_bold"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_info_sms_pin"
        android:gravity="center"
        android:layout_marginTop="@dimen/six"
        android:layout_below="@+id/tv_enter_pin"
        android:fontFamily="@font/ios_font_regular"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:translationZ="@dimen/four"
        android:background="@drawable/background_main_activity"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:paddingTop="@dimen/sixteen"
            android:paddingBottom="@dimen/sixteen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_sms_pin"
                android:layout_toStartOf="@+id/tv_next"
                android:textSize="16sp"
                android:layout_centerVertical="true"
                android:inputType="phone"
                android:maxLength="4"
                android:textColor="@android:color/black"
                android:fontFamily="@font/ios_font_regular"
                android:layout_marginStart="@dimen/twelve"
                android:layout_marginEnd="@dimen/twelve"
                android:hint="@string/hint_enter_pin"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_next"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/sixteen"
                android:paddingTop="@dimen/eight"
                android:paddingBottom="@dimen/eight"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:textColor="@android:color/white"
                android:background="@drawable/background_btn_next_selector"
                android:text="@string/next"
                android:fontFamily="@font/ios_font_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_wrong_number"
            android:textColor="#f09819"
            android:layout_marginStart="@dimen/twelve"
            android:layout_marginBottom="@dimen/sixteen"
            android:text="@string/wrong_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <FrameLayout
        android:visibility="gone"
        android:translationZ="@dimen/six"
        android:id="@+id/fl_loading"
        android:background="#CC000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lav"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/loading"
            android:layout_gravity="center"
            android:layout_width="@dimen/fiftysix"
            android:layout_height="@dimen/fiftysix" />
    </FrameLayout>


</RelativeLayout>